--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -17,7 +17,7 @@ body, html {
 .video-container {
   position: relative;
   width: 100%;
-  padding-top: 56.25%; /* 16:9比率 */
+  padding-top: 56.25%; 
   margin: 0 auto;
   display: none; /* 初期非表示 */
 }
