--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -11,19 +11,23 @@ body, html {
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
-  position: relative;
 }
 
 .video-container {
   position: relative;
   width: 100%;
-  min-height: 360px; /* 空プレイヤー非表示でもリストがずれないように */
+  padding-bottom: 56.25%; /* 16:9比率 */
+  height: 0;
+  min-height: 200px; /* PCでもリストが潰れないように */
 }
 
-/* 空プレイヤー・動画プレイヤー共通 */
+/* プレイヤー */
 #player {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  aspect-ratio: 16/9;
+  height: 100%;
   display: none; /* 初回クリックまで非表示 */
   background: black;
   border-radius: 6px;
