--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -16,9 +16,9 @@ body, html {
 .video-container {
   position: relative;
   width: 100%;
-  padding-bottom: 56.25%; /* 16:9比率 */
   height: 0;
-  min-height: 200px; /* PCでもリストが潰れないように */
+  padding-bottom: 56.25%; /* 16:9 */
+  min-height: 200px; /* PCでリスト潰れ防止 */
 }
 
 /* プレイヤー */
